# goosefoot-elmer

./: .gitignore  .project  .vimrc  CMakeLists.txt
ElmerGUI/matc/src/: eval.c  matc.c
eio/: CMakeLists.txt
eio/include/: eio_api.h  eio_api2.h  eio_config.h  eio_oldapi.h
eio/src/: eio_api_c.cpp  eio_api_f.cpp
elmergrid/src/: CMakeLists.txt  femelmer.c
elmergrid/src/metis/: CMakeLists.txt  macros.h  util.c
elmerice/: Makefile
fem/: CMakeLists.txt  config.h.cmake
fem/examples/TrilinosSolvers/: belos_ifpack.xml
fem/examples/TrilinosSolvers/ThermoElectric/: .gitignore  ptest_trili_kokkos.sif
fem/examples/TrilinosSolvers/ThermoElectric-Kokkos/: ELMERSOLVER_STARTINFO  ptest_trili.sif
fem/src/: BlockSolve.F90  CMakeLists.txt  CPUTime.c  CRSMatrix.F90  CoordinateSystems.F90  DirectSolve.F90  DirectSolve.src  ElementDescription.F90  ElementUtils.F90  ElementUtils.src  ElmerSolver.src  Feti.F90  GeneralUtils.F90  InterpolateMeshToMesh.F90  InterpolateMeshToMesh.src  Interpolation.F90  IterSolve.F90  Lists.F90  Load.c  MagnetoDynamicsUtils.F90  MainUtils.src  MeshUtils.F90  Messages.F90  ModelDescription.F90  Multigrid.F90  NumaAdaptive.F90  NumaSolverUtils.F90  ParallelUtils.src  ParticleUtils.F90  ResultToResult.F90  ResultToResult.src  SOLVER.KEYWORDS  SParIterComm.F90  SParIterComm.src  SParIterSolver.src  SolveHypre.c  SolveSuperLU.c  SolveTrilinosEpetra.cxx  SolveTrilinosKokkos.cxx  Solver.F90  (+11 more)
fem/src/binio/: CMakeLists.txt  binio.c  kinds.F90
fem/src/binio/test/: CMakeLists.txt
fem/src/modules/: AdvectionReaction.F90  CMakeLists.txt  DataToFieldSolver.F90  HeatSolve.F90  HeatSolve.src  MagnetoDynamics.src  Makefile.in  ParStokes.F90  SteadyPhaseChange.F90  VectorHelmholtz.F90
fem/src/view3d/: ViewFactors.c  ViewFactors.h  second.c
fem/src/viewaxis/: viewfact.cpp
fem/tests/heateq/: TempDist.sif  a.sif  totalpower_
fem/tests/heateq/Mesh/: TempDist.ep  case0001.vtu
fem/tests/heateq_bdf2/: totalpower_
fem/tests/multimesh/: Makefile
front/src/: ecif_userinterface_TCL.cpp
hutiter/: CMakeLists.txt
hutiter/src/: huti_sfe_c.F90  huti_sfe_c_C.c  huti_sfe_c_D.c  huti_sfe_c_S.c  huti_sfe_c_Z.c
matc/: CMakeLists.txt
matc/src/: eval.c  jacobi.c  main.c  matc.c
matc/src/elmer/: matc.h
mathlibs/src/arpack/: second.f
mathlibs/src/blas/: CMakeLists.txt
mathlibs/src/lapack/: CMakeLists.txt
meshgen2d/src/: Mesh.cpp  main.cpp
meshgen2d/src/include/: Element.h  Loop.h  coreGeometry.h
post/src/: ElmerPost.c  elmerpost.h  fttext.cpp  second.c
post/src/camera/: context.cc  file.cc  glp.h
post/src/graphics/: graphics.h
post/src/sico2elmer/: sico2elmerc.c
umfpack/: CMakeLists.txt
umfpack/src/umfpack/: CMakeLists.txt
umfpack/src/umfpack/include/: umf_config.h
